Fixed gradient overflow at checkout page when 1 item in cart only

--- a/web/css/layout/_minicart.less
+++ b/web/css/layout/_minicart.less
@@ -141,7 +141,7 @@
             max-height: 35vh;
             overflow: auto;
             overscroll-behavior: contain;
-            padding: 0 @1;
+            padding: 0 @1 @1-5;
             margin: 0 0 0 -@1;
         }
         &::after {
